--- a/02-JavaScript/08-forms/Andrew/homework/index.html
+++ b/02-JavaScript/08-forms/Andrew/homework/index.html
@@ -36,8 +36,8 @@
         <div class="output" id="card_pic"></div>
         <div class="output" id="card_id">00000000</div>
         <div class="output" id="card_DOB">dd/mm/yyyy</div>
-        <div id="card_joinded">dd/mm/join</div>
-        <div id="card_expire">dd/mm/exp</div>
+        <div class="output" id="card_joinded">dd/mm/join</div>
+        <div class="output" id="card_expire">dd/mm/exp</div>
         <canvas id="signature"></canvas>
     </div>
 
