--- a/02-JavaScript/08-forms/noa/home.html
+++ b/02-JavaScript/08-forms/noa/home.html
@@ -36,7 +36,17 @@
     </form>
 
 <div class="card1">
-    <div class="top"></div>
+    <!-- <div class="card">
+   <div class="top"></div>
+   
+   <div class="name">
+   <h1> ${firstname} ${lastname}</h1>
+   <h2> ${username}
+   
+   </div>
+   
+   </div> -->
+   
 </div>
 <script src="./dist/home.js"></script>
 </body>
