--- a/02-JavaScript/05-Objects and Arrays/Andrew/index.html
+++ b/02-JavaScript/05-Objects and Arrays/Andrew/index.html
@@ -12,6 +12,7 @@
         <input type="text" name="className" placeholder="Enter New Lesson Name" id="input">
         <input type="submit" name="submit" id="">
     </form>
+    <div id="place_holder"></div>
     <script src="dist/index.js"></script>
 </body>
 </html>
