--- a/02-JavaScript/05-Objects and Arrays/misha1801/index.html
+++ b/02-JavaScript/05-Objects and Arrays/misha1801/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <form onsubmit="submitItem(event)">
+        <div class="section">
+            <label for='section'>What item would you like to add?</label>
+            <select name='gender' id='gender'>
+            </select>
+        </div>
+    </form>
     <script src='dist/index.js'></script>
 </body>
+
 </html>
