--- a/02-JavaScript/05-Objects and Arrays/leon_yahya_misha_haim/index.html
+++ b/02-JavaScript/05-Objects and Arrays/leon_yahya_misha_haim/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div id = 'root'>
+
+        
+    </div>
     <script src='dist/index.js'></script>
 </body>
 </html>
