--- a/02-JavaScript/05-Objects and Arrays/Etan/Item Adding/index.html
+++ b/02-JavaScript/05-Objects and Arrays/Etan/Item Adding/index.html
@@ -15,7 +15,10 @@
 
 <body>
     <div id="container">
-
+<form class="myForm" >
+    <input type="text"><input type="text"><input type="text">
+</form>
+<input id='submit' type="submit" form="myform" value="Update"/>
     </div>
 </body>
 <script src="./dist/script.js"></script>
