--- a/02-JavaScript/05-Objects and Arrays/Andrew/01/index.html
+++ b/02-JavaScript/05-Objects and Arrays/Andrew/01/index.html
@@ -31,7 +31,13 @@
             <input type="submit" value="Remove item" id="">
         </form>
     </div>
-    <div id="view"></div>
+    <div id="view">
+
+
+
+
+        
+    </div>
     <script src="dist/index.js"></script>
 </body>
 
