--- a/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork/index.html
+++ b/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork/index.html
@@ -7,7 +7,7 @@
     <title>Objects</title>
 </head>
 <body>
-    <div id="Home"></div>
+    <div id="rootHome"></div>
     <script src="dist/index.js"></script>
 </body>
 </html>
