--- a/02-JavaScript/05-Objects and Arrays/misha1801/index.html
+++ b/02-JavaScript/05-Objects and Arrays/misha1801/index.html
@@ -9,13 +9,19 @@
 </head>
 
 <body>
-    <form onsubmit="submitItem(event)">
+    <form onsubmit="submitType(event)">
         <div class="section">
-            <label for='section'>What item would you like to add?</label>
-            <select name='gender' id='gender'>
+            <label for='choise'>What kind of item would you like to add?</label>
+            <select name='choise' id='choise' onchange="this.form.submit(event)">
+                <option value="please"  disabled selected>Please Choose</option>
+                <option value="books">Books</option>
+                <option value="shoes">Shoes</option>
+                <option type='submit' value="guitars">Guitars</option>
             </select>
         </div>
     </form>
+
+    <div id='root'></div>
     <script src='dist/index.js'></script>
 </body>
 
