--- a/02-JavaScript/05-Objects and Arrays/asnafyYossi_Objects3_movies/index.html
+++ b/02-JavaScript/05-Objects and Arrays/asnafyYossi_Objects3_movies/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="dist/style.css">
+    
     <title>Document</title>
-    <link rel="stylesheet" href="./dist/style.css">
 </head>
-<body>
-    <div id="rootHome"></div>
+<body style="background-image: url('background.jpg');">
+    <div id="html"></div>
     <script src="dist/index.js"></script>
     
 </body>
-<script src="./dist/script.js"></script>
 </html>
