--- a/02-JavaScript/05-Objects and Arrays/chaim/chaim1/index.html
+++ b/02-JavaScript/05-Objects and Arrays/chaim/chaim1/index.html
@@ -7,10 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="rootHome"></div>
-    <script src="dist/index.js"></script>
-    
+    <div id="roothome"></div>
     <script src="dist/index.min.js"></script>
-   <div class="books"></div>
 </body>
 </html>
