--- a/02-JavaScript/05-Objects and Arrays/shani/hw solution/index.html
+++ b/02-JavaScript/05-Objects and Arrays/shani/hw solution/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <form onsubmit='handleAddMovie(event)'>
-        <input type="text" name="title" placeholder="Title of book" required>
-        <input type='number' name="year" placeholder="Year of book" required>
+        <input type="text" name="title" placeholder="Title of movie" required>
+        <input type='number' name="year" placeholder="Year of movie" required>
         <input type="submit" value="ADD MOVIE">
     </form>
 
