--- a/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Solution/index.html
+++ b/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Solution/index.html
@@ -12,6 +12,8 @@
         <input type='number' name="year" placeholder="Year of movie" required>
         <input type="submit" value="ADD MOVIE">
     </form>
+    <label for="price">Price</label>
+    <input type="number" id='price' placeholder="Set amount" onkeyup="handlePriceChange(event)">
     <div id="rootMovies"></div>
     <script src="dist/index.js"></script>
 </body>
