--- a/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Exercise1/noa/index.html
+++ b/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Exercise1/noa/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-
+<form onsubmit="handleAddItem(event)">
+    <input type="text" name="name" placeholder="Name of movie" required>
+    <input type="number" name="year" placeholder="Year of movie" required>
+    <input type="submit" value="Add movie">
+</form>
     <div id="root"></div>
    <script src="dist/index.js" ></script> 
 </body>
