--- a/02-JavaScript/05-Objects and Arrays/Andrew/01/index.html
+++ b/02-JavaScript/05-Objects and Arrays/Andrew/01/index.html
@@ -29,6 +29,12 @@
             <input type="text" placeholder="Name of item to remove" id="">
             <input type="submit" value="Remove item" id="">
         </form>
+        <div id="sort-wrapper">
+            <button id="year_up">By year 🠖</button>
+            <button id="year_down">By year 🠔</button>
+            <button id="name_up">By name 🠖</button>
+            <button id="name_down">By name 🠔</button>
+        </div>
     </div>
     <div id="view">
 
