--- a/02-JavaScript/05-Objects and Arrays/marina/myHomeHW/myHome.html
+++ b/02-JavaScript/05-Objects and Arrays/marina/myHomeHW/myHome.html
@@ -25,7 +25,9 @@
         </label>
         <input type="submit" name="submit" id="submit" placeholder='Submit'>
     </form>
-    <div id="listRoot"></div>
+    <div id="rootBook"></div>
+    <div id="rootMusic"></div>
+    <div id="rootMovie"></div>
     <script src="dist/myHome.js"></script>
 </body>
 
