--- a/02-JavaScript/07-DOM manipulations/Andrew/andrew/05/index.html
+++ b/02-JavaScript/07-DOM manipulations/Andrew/andrew/05/index.html
@@ -10,27 +10,29 @@
 </head>
 
 <body>
-    <form onsubmit="addItem(ev)">
-        <input type="text" placeholder="Item Name" id="item_name">
-        <input type="number" placeholder="00.00$" id="item_price">
-        <input type="search" value="Add Item" id="submit">
+    <form onsubmit='handleSubmit(event)'>
+        <input type="text" placeholder="Item Name" name="itemName" id="item_name">
+        <input type="number" placeholder="00.00$" name="itemPrice" id="item_price">
+        <input type="submit" value="Add Item" name="send" id="submit">
     </form>
     <div id="sort_wrapper">
-        <button>Sort: Price ↓</button>
-        <button>Sort: Price ↑</button>
-        <button>Sort: Name ↓</button>
-        <button>Sort: Name ↑</button>
+        <button id="price_down" >Sort: Price ↓</button>
+        <button id="price_up" >Sort: Price ↑</button>
+        <button id="name_down" >Sort: Name ↓</button>
+        <button id="name_up" >Sort: Name ↑</button>
         <div id="sliders">
             <label for="min">Min Price
-                <input type="range" name="min" min="0" max="11">
+                <input type="range" name="min" min="0" max="11" id="rangeMin" onchange='handleSlider(event)'>
+                <p id="min-value"></p>
             </label>
             <label for="max">Max Price
-                <input type="range" name="max" min="0" max="11">
+                <input type="range" name="max" min="0" max="11" id="rangeMax" onchange='handleSlider(event)'>
+                <p id="max-value"></p>
             </label>
         </div>
     </div>
     <div id="output"></div>
-    
+
 
     <script src="dist/index.js"></script>
 </body>
