--- a/02-JavaScript/07-DOM manipulations/Andrew/andrew/05/index.html
+++ b/02-JavaScript/07-DOM manipulations/Andrew/andrew/05/index.html
@@ -22,11 +22,11 @@
         <button id="name_up" >Sort: Name ↑</button>
         <div id="sliders">
             <label for="min">Min Price
-                <input type="range" name="min" min="0" max="11" id="rangeMin" onchange='handleSlider(event)'>
+                <input type="range" name="min" min="0" max="15" value="0" id="rangeMin" onchange='handleSlider(event)'>
                 <p id="min-value"></p>
             </label>
             <label for="max">Max Price
-                <input type="range" name="max" min="0" max="11" id="rangeMax" onchange='handleSlider(event)'>
+                <input type="range" name="max" min="0" max="15" value="15" id="rangeMax" onchange='handleSlider(event)'>
                 <p id="max-value"></p>
             </label>
         </div>
