--- a/02-JavaScript/05-Objects and Arrays/shani/hw zap/zap.html
+++ b/02-JavaScript/05-Objects and Arrays/shani/hw zap/zap.html
@@ -11,8 +11,8 @@
 
 <body>
     <form onsubmit='handleSubmit(event)'>
-        <input type="text" name="title" placeholder="name of item" required>
-        <input type='number' name="year" placeholder="enter price" required>
+        <input type="text" name="description" placeholder="name of item" required>
+        <input type='number' name="price" placeholder="enter price" required>
         <input type="submit" value="ADD">
     </form>
 
@@ -21,6 +21,8 @@
     <button type="button" onclick="">Sort by lowest to highest</button>
     <label>Show price lower than</label>
     <input type='number' placeholder="number">
+
+    <div id="rootZap"></div>
 
     <script src="dist/zap.js"></script>
 </body>
