--- a/02-JavaScript/08-forms/Example/InputFields/index.html
+++ b/02-JavaScript/08-forms/Example/InputFields/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-    <form onsubmith='handleSubmit(event)'>
+    <form onsubmit='handleSubmit(event)'>
         <input type="text" name="name" placeholder="name">
         <input type="number" name="age" placeholder="age">
     </form>
