--- a/02-JavaScript/05-Objects and Arrays/shani/hw zap/zap.html
+++ b/02-JavaScript/05-Objects and Arrays/shani/hw zap/zap.html
@@ -17,8 +17,8 @@
     </form>
 
     
-    <button type="button" onclick="">Sort by highest to lowest</button>
-    <button type="button" onclick="">Sort by lowest to highest</button>
+    <button type="button" id="ascending">Sort by highest to lowest</button>
+    <button type="button" id="descending">Sort by lowest to highest</button>
     <label>Show price lower than</label>
     <input type='number' placeholder="number">
 
