--- a/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Exercise1/noa/zap.html
+++ b/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Exercise1/noa/zap.html
@@ -26,10 +26,10 @@
         <label for="hightolow">high to low</label> -->
     </div>
 
-
+<div class="price">
     <label for="price">Show price lower than</label>
     <input type="number" name="price" id="price" placeholder="price" onkeyup="handlePrice(event)">
-
+</div>
     <div id="list"></div>
 
     <script src="dist/zap.js"></script>
