--- a/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork2/index.html
+++ b/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork2/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Objects</title>
+    <title>Objects - Omri</title>
 </head>
 <body>
+    <form onsubmit='handleMovie(ev)'>
+        <input type="text" name="Title" placeholder="Title">
+        <input type="text" name="Director" placeholder="Director">
+        <input type="submit" value="Add Movie">
+    </form>
     <div id="root_Movies"></div>
     <script src="dist/index.js"></script>
 </body>
