--- a/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork2/index.html
+++ b/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork2/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <form onsubmit='handleMovie(ev)'>
-        <input type="text" name="Title" placeholder="Title">
-        <input type="text" name="Director" placeholder="Director">
+        <input type="text" name="Title" placeholder="Title" required>
+        <input type="text" name="Director" placeholder="Director" required>
         <input type="submit" value="Add Movie">
     </form>
     <div id="root_Movies"></div>
