--- a/02-JavaScript/05-Objects and Arrays/leon zap/index.html
+++ b/02-JavaScript/05-Objects and Arrays/leon zap/index.html
@@ -11,15 +11,8 @@
     <form onsubmit='handleAddItem(event)'>
         <input type="text" id="item" name="title" placeholder="Enter Description" required>
         <input type='number' id="price" name="price" placeholder="Enter Price" required>
-      <button onclick="addItem()" type="submit" class="btn-list">Add Item</button>   
- </form>
-    <div class="container">
-        <ul>
-            <li>hk</li>
-            <li>kh</li>
-        </ul>
-
-   </div>
+        <input type="submit" value="ADD item"> </form>
+  
     <div class="root"></div>
     <script src="dist/index.js"></script>
 </body>
