--- a/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork2/index.html
+++ b/02-JavaScript/05-Objects and Arrays/OmriAharonov/homeWork2/index.html
@@ -7,7 +7,7 @@
     <title>Objects - Omri</title>
 </head>
 <body>
-    <form onsubmit='handleMovie(ev)'>
+    <form onsubmit='handleMovie(event)'>
         <input type="text" name="Title" placeholder="Title" required>
         <input type="text" name="Director" placeholder="Director" required>
         <input type="submit" value="Add Movie">
