css and cat headlines

--- a/02-JavaScript/05-Objects and Arrays/asnafyYossi_Objects_myHome/index.html
+++ b/02-JavaScript/05-Objects and Arrays/asnafyYossi_Objects_myHome/index.html
@@ -28,13 +28,13 @@
         </form>
         <div id="card">
             <div id="books"
-                style="background-image: url(buble1.png);background-repeat:no-repeat; width:200px; height:200px; ">
+                style="background-image: url(buble1.png);background-repeat:no-repeat; width:200px; height:200px; "><h1>BOOKS</h1>
             </div>
             <div id="clothes"
-                style="background-image: url(buble1.png);background-repeat:no-repeat; width:200px; height:200px; ">
+                style="background-image: url(buble1.png);background-repeat:no-repeat; width:200px; height:200px; "><h1>CLOTHES</h1>
             </div>
             <div id="movies"
-                style="background-image: url(buble1.png);background-repeat:no-repeat; width:200px; height:200px; ">
+                style="background-image: url(buble1.png);background-repeat:no-repeat; width:200px; height:200px; "><h1>MOVIES</h1>
             </div>
         </div>
     </div>
