--- a/02-JavaScript/05-Objects and Arrays/leon zap/index.html
+++ b/02-JavaScript/05-Objects and Arrays/leon zap/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="logo">ZAP</div>
-    <form onsubmit='handleAddItem(event)'>
-        <input type="text" id="item" name="title" placeholder="Enter Description" required>
-        <input type='number' id="price" name="price" placeholder="Enter Price" required>
+    <form onsubmit='handlesubmit(event)' id="idItem">
+        <input type="text"  name="description" placeholder="Enter Description" required>
+        <input type="number" name="price" placeholder="Enter Price" required>
         <input type="submit" value="ADD item"> </form>
   
-    <div class="root"></div>
+    <div class="rootItem"></div>
     <script src="dist/index.js"></script>
 </body>
 </html>
