--- a/02-JavaScript/05-Objects and Arrays/chaim/chaim1/index.html
+++ b/02-JavaScript/05-Objects and Arrays/chaim/chaim1/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="roothome"></div>
+    <div id="rootbooks"></div>
+    <form onsubmit= 'Handleaddbooks(event)'>
+        <input type="text" name="tytle" placeholder="tytle of books" required>
+        <input type="namber" name="year" placeholder="year of books" required>
+        <input type="submit" value= 'add books'>
+    </form>
     <script src="dist/index.min.js"></script>
 </body>
 </html>
