--- a/02-JavaScript/05-Objects and Arrays/shani/hw zap/zap.html
+++ b/02-JavaScript/05-Objects and Arrays/shani/hw zap/zap.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>ZAP</h1>
     <form onsubmit='handleSubmit(event)'>
         <input type="text" name="description" placeholder="name of item" required>
         <input type='number' name="price" placeholder="enter price" required>
@@ -20,10 +21,10 @@
         <button type="button" id="ascending">Sort by highest to lowest</button>
         <button type="button" id="descending">Sort by lowest to highest</button>
     </div>
-
-    <label>Show price lower than</label>
-    <input type='number' onkeyup="handleInput(event)" placeholder="number">
-
+    <div class="lowerThanPrice">
+        <label>Show price lower than</label>
+        <input type='number' onkeyup="handleInput(event)" placeholder="number">
+    </div>
     <div id="rootZap"></div>
 
     <script src="dist/zap.js"></script>
