--- a/02-JavaScript/05-Objects and Arrays/shani/hw solution/hwSolution.html
+++ b/02-JavaScript/05-Objects and Arrays/shani/hw solution/hwSolution.html
@@ -11,7 +11,8 @@
     <form onsubmit='handleAddMovie(event)'>
         <input type="text" name="title" placeholder="Title of movie" required>
         <input type='number' name="year" placeholder="Year of movie" required>
-        <input type="image" name="imgSrc" >
+        <input type="file" name="imgSrc"   accept="image/*" onchange="upload(this.value)">
+
         <input type="submit" value="ADD MOVIE">
     </form>
     <div id="rootMovies"></div>
