--- a/02-JavaScript/05-Objects and Arrays/Or/zap/zap.html
+++ b/02-JavaScript/05-Objects and Arrays/Or/zap/zap.html
@@ -7,21 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="dist/zap.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
 <body>
     <form onsubmit="handleSubmit(event)">
-        <label for="description">description</label>
+        <label for="description">Description:</label>
         <input type="text" name="description" placeholder="Enter description">
-        <label for="price">price</label>
+        <label for="price">Price:</label>
         <input type="number" name="price" placeholder="Enter price">
         <input type="submit" value="Add">
     </form>
     <div class="sort">
         <button id="desc" onclick="handleClick(event)">desc</button>
         <button id="asc" onclick="handleClick(event)">asc</button>
+        <input type="number" id="filter" name="filter" placeholder="Max Price" onkeyup="handleFilter(event)">
     </div>
-    <input type="number" id="filter" name="filter" placeholder="Max Price" onkeyup="handleFilter(event)">
 
     <ul id="rootList"></ul>
     <script src="dist/zap.js"></script>
