--- a/02-JavaScript/05-Objects and Arrays/OmriAharonov/Zap/zap.html
+++ b/02-JavaScript/05-Objects and Arrays/OmriAharonov/Zap/zap.html
@@ -22,6 +22,7 @@
     <form class="sort" onsubmit="handleSortDesc(event)">
         <input type="submit" value="sort desc"> 
     </form>
+    <input id="newItems" type="number" placeholder="Set Amount" onkeyup="handlePrice(event)">
     <div id="rootItems"></div>
     <script src="dist/zap.js"></script>
 </body>
