--- a/02-JavaScript/05-Objects and Arrays/marina/ZAP/zap.html
+++ b/02-JavaScript/05-Objects and Arrays/marina/ZAP/zap.html
@@ -16,7 +16,7 @@
     <div class="header">
         <div class="header_wrapper">
             <img src="img\zap.png" width="90" height="85" alt="">
-            <form onsubmit="HandleSearch(event)">
+            <form click ="HandleSearch (event)">
                 <input class="search" type="text" name="search" id="search">
             </form>
             <a itemprop="url" href="https://www.zap.co.il/">
@@ -73,7 +73,7 @@
     <form  onsubmit="handleSubmit(event)" class="lookig_for">
         <input style="width: 15%; height: 3em;" type="text" name="comp_title" id="comp_title" placeholder="Enter description here" >
         <input style="width: 15%; height: 3em;" type="text" name="comp_price" id="comp_price" placeholder="Enter price here" >
-        <button style="width: 5%; height: 3em;" onsubmit="handleSubmit(event)"   id="btn_submit" type="submit">Add an item</button>
+        <button style="width: 5%; height: 3em;" id="btn_submit" type="submit">Add an item</button>
     </form>
 
     <form class="delete">
@@ -82,17 +82,18 @@
     </form>
 
     <form class="sortPrice">
-        <input style="width: 15%; height: 3em;" type="text" name="sort_price" id="sort_price" placeholder="Enter a price here" >
-        <button style="width: 5%; height: 3em;"  onsubmit="handleSortPrice(event)" id="btn_submit" type="submit">Lowest price</button>
+        <input style="width: 15%; height: 3em;" type="text" name="filter_price" id="filter_price" placeholder="Enter a price here" >
+        <button style="width: 5%; height: 3em;"  onsubmit="handleFilter(event)" id="btn_submit" type="submit">Find for me</button>
     </form>
 
     <form class="sortName">
-        <button  class="ascending" style="width: 5%; height: 3em;"  onsubmit="handleSortNameAscen(event)" id="btn_submit" type="submit">Sort by name  <ion-icon name="arrow-up-outline"></ion-icon></button>
-        <button  class="descending" style="width: 5%; height: 3em;"  onsubmit="handleSortNameDescen(event)" id="btn_submit" type="submit">Sort by name  <ion-icon name="arrow-down-outline"></ion-icon></button>
+        <button  class="ascending" style="width: 5%; height: 3em;"  onsubmit="handlePriceAscen(event)" id="btn_submit" type="submit">Sort by price  <ion-icon name="arrow-up-outline"></ion-icon></button>
+        <button  class="descending" style="width: 5%; height: 3em;"  onsubmit="handlePriseDescen(event)" id="btn_submit" type="submit">Sort by price  <ion-icon name="arrow-down-outline"></ion-icon></button>
     </form>
 
 
     <div id="rootComputer"></div>
+    <!-- <div id="rootComputerList"></div> -->
 
 
     <script src="dist/zap.js"></script>
