--- a/02-JavaScript/05-Objects and Arrays/leon zap/index.html
+++ b/02-JavaScript/05-Objects and Arrays/leon zap/index.html
@@ -24,6 +24,14 @@
 
     <input type="number" name="number" placeholder="Filter Price" onkeyup="handleFilter(event)" id="filterItem">
 
+    <div class="menu">
+        <div class="products"> compuetr</div>
+        <div class="products"> T.V</div>
+        <div class="products"> Air Pods</div>
+        <div class="products"> Phone</div>
+        <div class="products"> Watches</div>
+    </div>
+
   
     <div class="rootItem"></div>
     <script src="dist/index.js"></script>
