--- a/02-JavaScript/05-Objects and Arrays/shay_zap/index.html
+++ b/02-JavaScript/05-Objects and Arrays/shay_zap/index.html
@@ -18,7 +18,7 @@
     <button type="submit" onclick="sort(event)" id="desc">sort DESC</button>
    
   
-     <form onkeyup="handleFilter(event)"><input type="number" name="filter"  placeholder="enter max price" ></form>
+     <input type="number" name="filter" onkeyup="handleFilter(event)" placeholder="enter max price" >
  
 
 <div id="rootZap"></div>
