--- a/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Room3/index.html
+++ b/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Room3/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -34,4 +34,4 @@
     <script src='dist/intex.js'></script>
 </body>
 
-</html>
+</html> -->
