--- a/02-JavaScript/08-forms/Example/InputFields/index.html
+++ b/02-JavaScript/08-forms/Example/InputFields/index.html
@@ -11,8 +11,10 @@
     <form onsubmit='handleSubmit(event)'>
         <input type="text" name="name" placeholder="name">
         <input type="number" name="age" placeholder="age">
+        <input type="submit" value="Send">
     </form>
-    <input type="text" name="" id="" onkeyup="handleInput(event)">
+    <input type="number" name="" id="" onkeyup="handleInput(event)">
+    <input type="color" name="" id="" onchange="handleChangeColor(event)">
     <script src="dist/index.js"></script>
 </body>
 </html>
