--- a/02-JavaScript/05-Objects and Arrays/shay_zap/index.html
+++ b/02-JavaScript/05-Objects and Arrays/shay_zap/index.html
@@ -14,8 +14,8 @@
   
     </form>
     
-        <button type="submit" onclick="sort(event)" id="asc">sort ASC</button>
-    <button type="submit" onclick="sort(event)" id="desc">sort DESC</button>
+        <button type="submit" onclick="handleAsc(event)" id="asc">sort ASC</button>
+    <button type="submit" onclick="handleDesc(event)" id="desc">sort DESC</button>
    
   
      <input type="number" name="filter" onkeyup="handleFilter(event)" placeholder="enter max price" >
