--- a/02-JavaScript/08-forms/alex/Zap/index.html
+++ b/02-JavaScript/08-forms/alex/Zap/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZAP</title>
 </head>
+
 <body>
 
     <form onsubmit="handleAddItem(event)">
@@ -13,16 +15,19 @@
         <input type="number" name="price" placeholder="price" id="price" required>
         <input type="submit" value="add" id="button">
     </form>
-<br>
-    <!-- <input type="submit" value="sort asc">
-    <input type="submit" value="sort dsc"> -->
-    
-    <input type="number" placeholder="show prices lower than x" onkeyup="handleChange(event)">
+    <br>
 
+
+    <input type="number" placeholder="show prices lower than x" onkeyup="handleChange(event)">
+    <br>
+    <br>
+    <input type="submit" value="asc" onclick="handleSortAsc(event)">
+    <input type="submit" value="dsc" onclick="handleSortDsc(event)">
 
 
     <div id="rootItems"></div>
     <script src='dist/index.js'></script>
 
 </body>
+
 </html>
