--- a/02-JavaScript/05-Objects and Arrays/Or/zap/zap.html
+++ b/02-JavaScript/05-Objects and Arrays/Or/zap/zap.html
@@ -17,6 +17,12 @@
         <input type="text" name="description" placeholder="Enter description" required>
         <label for="price">Price:</label>
         <input type="number" name="price" placeholder="Enter price" required>
+        <select name="type" id="">
+            <option value="type" disabled selected>Type</option>
+            <option value="sports">Sports</option>
+            <option value="books">Books</option>
+            <option value="food">Food</option>
+        </select>
         <input type="submit" value="Add">
     </form>
     <div class="sort">
