--- a/02-JavaScript/09-formsAndObjects/HW/shani hw/index.html
+++ b/02-JavaScript/09-formsAndObjects/HW/shani hw/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <h1>My Museum</h1>
-    
+    <form onsubmit="handleSubmit(event)">
+        <input type="text" name="nameOfPainting" placeholder="name of painting" required>
+        <input type="text" name="artist" placeholder="name of artist" required>
+        <input type='number' name="madeIn" placeholder="enter year made" required>
+        <input type="submit" value="ADD">
+    </form>
     <div id="root"></div>
     <script src="dist/index.js"></script>
 </body>
