--- a/02-JavaScript/05-Objects and Arrays/mishadu/index.html
+++ b/02-JavaScript/05-Objects and Arrays/mishadu/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -64,10 +65,13 @@
 
             <div id="root">
             </div>
+
         </div>
 
+    </div>
 
-        <script src='dist/index.js'></script>
+    <script src='dist/index.js'></script>
 </body>
+
 
 </html>
