--- a/02-JavaScript/09-formsAndObjects/HW/shani hw/index.html
+++ b/02-JavaScript/09-formsAndObjects/HW/shani hw/index.html
@@ -15,7 +15,9 @@
         <input type='number' name="madeIn" placeholder="enter year made" required>
         <input type="submit" value="ADD">
     </form>
-    <div id="root"></div>
+    <div id="root">
+        <!-- <button onclick="handleDelete(event)">delete</button> -->
+    </div>
     <script src="dist/index.js"></script>
 </body>
 </html>
