--- a/02-JavaScript/09-formsAndObjects/HW/OmriAharonov/Zap2/zap.html
+++ b/02-JavaScript/09-formsAndObjects/HW/OmriAharonov/Zap2/zap.html
@@ -21,6 +21,14 @@
         <input type="submit" value="ADD">
     </form>
 
+    <select name="" id="" onchange='handleSelect(event)'>
+        <option value="" disabled selected>Choose a type</option>
+        <option value="all">Show all</option>
+        <option value="computer">Computers</option>
+        <option value="kitchen accessory">Kitchen Accessories</option>
+        <option value="smartphone">Smartphones</option>
+    </select>
+
     <div class="sort">
         <button type="submit" value="sort asc" onclick="handleSortAsc(event)" style="width: 180px;">sort Asc</button>
         <button type="submit" value="sort desc" onclick="handleSortDesc(event)" style="width: 180px;">sort Desc</button>
