--- a/02-JavaScript/09-formsAndObjects/HW/OmriAharonov/Zap2/zap.html
+++ b/02-JavaScript/09-formsAndObjects/HW/OmriAharonov/Zap2/zap.html
@@ -21,7 +21,7 @@
         <input type="submit" value="ADD">
     </form>
 
-    <select name="" id="" onchange='handleSelect(event)'>
+    <select name="" id="select" onchange='handleSelect(event)'>
         <option value="" disabled selected>Choose a type</option>
         <option value="all">Show all</option>
         <option value="computer">Computers</option>
