--- a/02-JavaScript/09-formsAndObjects/HW/Etan hw/zap.html
+++ b/02-JavaScript/09-formsAndObjects/HW/Etan hw/zap.html
@@ -12,6 +12,7 @@
 
 <body>
   <header>
+    <span class="logo"></span>
     <form onsubmit="handleSubmit(event)">
       <legend>enter your new item info:
         <input type="text" name="name" id="name" placeholder="Type your items name?">
@@ -81,6 +82,7 @@
     <input type="number" name="a" id="a" placeholder="num 1">
     <input type="number" name="b" id="b" placeholder="num 2">
     <input type="submit">
+    
   </form>
 </fieldset>
 </div>
